--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
+   
 
+<h1>Website Cost Estimator</h1>
+
+   
 <div class="row">
-  <div class="col-4 col"><h1>Website Cost Estimator</h1><form class="form-signin">
+  <div class="sm-5 col"><form class="form-signin">
       <img class="mb-4" src="https://images.squarespace-cdn.com/content/v1/5703e07c1bbee035ec1f1038/1486158537956-J6JCWYE0P7GEXGGFOBZB/icon-blue.png?format=1500w" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Add your Email to Continue  </h1>
+      <h3 class="h3 mb-3 font-weight-normal">Add your Email to Continue  </h3>
 	  
 	  
 	  
@@ -42,8 +45,33 @@
   
   
   
+  <div class="col-fill col"><h3>How Many Pages Does Your Site Require?</h3></div>
   
-  <div class="col-4 col"><h1>How Many Pages Does Your Site Require?</h1></div>
+  
+  
+  
+  
+  <div class="col-fill col">col-fill col</div>
+  
+  
+  
+  
+  
+</div>
+
+
+
+
+
+
+<div class="row">
+  <div class="col-4 col"></div>
+  
+  
+  
+  
+  
+  <div class="col-4 col"></div>
   
   
   
