added cards for easy button flow

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PJ_Pro_Grams</title>
+    <title>Plan Estimator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -29,6 +29,7 @@
 
 <h1>Website Cost Estimator</h1>
 
+<!-- First Flow -->
    
 <div class="row">
   <div class="sm-5 col"><form class="form-group" class="form-signin">
@@ -62,13 +63,34 @@
   
   
   
-  <div class="col-fill col"><h3>How Many Pages Does Your Site Require?</h3></div>
+  <div class="col-fill col"><h3>How Many Pages Does Your Site Require?</h3>
+  <div class="card" style="width: 20rem;">
+  <div class="card-header">Header</div>
+    <div class="card-body">
+      <h4 class="card-title">My awesome Paper card!</h4>
+      <h5 class="card-subtitle">Nice looking subtitle.</h5>
+      <p class="card-text">You can also place image on the bottom of the card.</p>
+      <button>Let me go here!</button>
+    </div>
+  <div class="card-footer">Footer</div>
+</div></div>
   
   
   
   
   
-  <div class="col-fill col"><h3>What Level of Design Do You Need? </h3></div>
+  <div class="col-fill col"><h3>What Level of Design Do You Need? </h3>
+  <div class="card" style="width: 20rem;">
+  <div class="card-header">Header</div>
+    <div class="card-body">
+      <h4 class="card-title">My awesome Paper card!</h4>
+      <h5 class="card-subtitle">Nice looking subtitle.</h5>
+      <p class="card-text">You can also place image on the bottom of the card.</p>
+      <button>Let me go here!</button>
+    </div>
+  <div class="card-footer">Footer</div>
+</div>
+  </div>
   
   
   
@@ -76,7 +98,18 @@
   
 </div>
 
+<!--Placeholder Row -->
+<div class="row">
 
+</div>
+
+<!--Output Row -->
+<div class="row">
+
+
+
+
+</div>
 
 
 
