--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <!-- First Flow -->
    
-<div class="row">
-  <div class="sm-5 col"><form class="form-group" class="form-signin">
+<div class="row flex-spaces" class="row child-borders">
+  <div class="sm-5 col border border-5 border-primary" class="shadow shadow-hover"><form class="form-group" class="form-signin">
       <img class="mb-4" src="https://images.squarespace-cdn.com/content/v1/5703e07c1bbee035ec1f1038/1486158537956-J6JCWYE0P7GEXGGFOBZB/icon-blue.png?format=1500w" alt="" width="72" height="72">
       <h3 class="h3 mb-3 font-weight-normal">Add your Email to Continue  </h3>
 	  
@@ -63,7 +63,7 @@
   
   
   
-  <div class="col-fill col"><h3>How Many Pages Does Your Site Require?</h3>
+  <div class="col-fill col border border-3 border-primary"><h3>How Many Pages Does Your Site Require?</h3>
   <div class="card" style="width: 20rem;">
   <div class="card-header">Header</div>
     <div class="card-body">
@@ -79,7 +79,7 @@
   
   
   
-  <div class="col-fill col"><h3>What Level of Design Do You Need? </h3>
+  <div class="col-fill col border border-6 border-primary"><h3>What Level of Design Do You Need? </h3>
   <div class="card" style="width: 20rem;">
   <div class="card-header">Header</div>
     <div class="card-body">
