organizing readme and html structure for animations and calculations

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
      
       
     </div>
-  <div class="card-footer">Form in Card Example</div>
+  <div class="card-footer"><a href="https://github.com/solution-wizards/pricingtool">Learn How to Make this Yourself</div>
 </div>
   
   
@@ -97,28 +97,20 @@
 </div>
 
 
+<!--Second Flow -->
+
+<!--Third Flow -->
+
+<!--Fourth Flow -->
+
+<!--Fifth Flow -->
+
+<!--Sixth Flow -->
 
 
 
 
-   
-<div class="row flex-spaces" class="row child-borders" hidden="true">
-  <div  class="sm-5 col border border-5 border-primary" class="shadow shadow-hover"class="glass"></div>
-  
-  
-  
-  
-  <div class="col-fill col border border-3 border-primary"><h3>How Many Pages Does Your Site Require?</h3>
-  <div class="card" style="width: 20rem;">
-  <div class="card-header">Header</div>
-    <div class="card-body">
-      <h4 class="card-title">My awesome Paper card!</h4>
-      <h5 class="card-subtitle">Nice looking subtitle.</h5>
-      <p class="card-text">You can also place image on the bottom of the card.</p>
-      <button>Let me go here!</button>
-    </div>
-  <div class="card-footer">Footer</div>
-</div></div>
+
   
   
   
