included custom scrips in homepage, ready to begin calculating and animating

--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
  
 
 
-<!-- Script for Animations and Calculations-->
-    <script src="\scripts.js" async defer></script>
+<!-- Custom Script for Animations and Calculations-->
+    <script src="scripts.js" async defer></script>
+    
+    <script src="calculations.js" async defer></script>
     
     <!-- Script for jQuery and Bootstrap-->
 
