--- a/vpage1.html
+++ b/vpage1.html
@@ -39,6 +39,11 @@
   <body>
   
   
+    <a href="index.html"><img src="img/WSlogo.png" height="200"></img></a>
+
+  
+  
+  
       <iframe src="https://survey.zohopublic.com/zs/ckCsLp" frameborder='0' style='height:700px;width:100%;' marginwidth='0' marginheight='0' scrolling='auto' allow='geolocation'></iframe>
   
   
